--- a/dthesis_template/inputs/Selftrig.tex
+++ b/dthesis_template/inputs/Selftrig.tex
@@ -143,7 +143,7 @@ ASICのあるピクセルが信号を検知すると，そのピクセルが40 $
 
 \begin{table}[h]
   \centering
-  \caption{線源からのHitが存在するピクセル数}
+  \caption{線源からのHitが存在するピクセル数(線源を置いていない時にHit数が0だったピクセルについて)}
   \begin{tabular}{|cl|cl|} \hline
     (i) & 条件を満たすピクセル数 & 22854 & (87.5 \%) \\ \hline
     (ii) & 条件を満たさないピクセル & 56 & (0.2 \%) \\ \hline
@@ -154,3 +154,60 @@ ASICのあるピクセルが信号を検知すると，そのピクセルが40 $
 表\ref{tab:0hitdist}より，30分間のセルフトリガによるデータ取得では，22854個のピクセルが線源からの信号を検出できていると判断できるため，品質保証が可能であることがわかった．一方で，判断できなかった56個のピクセルについては統計量の少なさが原因と考えられるため，今回使用した線源よりも10倍以上強い放射能の線源を用いることで，品質保証が可能になるのではないかと考えた．
 
 \subsection*{線源なしの時のHit数が0より大きかった場合}
+線源有り・無しの場合で取得したデータのToT分布を図\ref{fig:selftot}に示す．この分布から，線源からの信号はToT $> 5$に存在すると仮定し，以降ToT $>5$となるデータだけを使用した．バックグラウンドの多いピクセルは，線源からの信号を以下のように見積もり，バックグラウンドの分布と比較した．
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=8cm]{./figure/selftot.png}
+  \caption{線源の有り(赤)・無し(青)のToT分布}
+  \label{fig:selftot}
+\end{figure}
+
+
+\begin{table}[h]
+  \centering
+  \caption{線源からの信号の分布の見積もり}
+  \label{tb:selfnon0}
+  \begin{tabular}{cc} \hline
+    $n \pm \sqrt{n}$ & 実測値  (線源ありの時のToT $>5$だったピクセルのヒット数) \\
+    $n_{bg} \pm \sqrt{n_{bg}}$ & バックグラウンド  (線源なしの時のToT $>5$だったピクセルのヒット数)\\
+    $n_{sig} = n - n_{bg}$ & 見積もった真の線源からのヒット数 \\ \hline
+  \end{tabular}
+\end{table}
+
+表\ref{tb:selfnon0}のように，真の線源からのヒット数を見積もった上で，線源からのヒットがあったとみなすピクセルの条件を式\ref{eq:non0}のように定義した．この条件を満たし，線源からのHitがあったと判断したピクセルの分布を表\ref{tab:non0dist}に示す．
+
+\begin{eqnarray}
+  \label{eq:non0}
+  \frac{n_{sig}}{\sqrt{n_{bg}}} > 5
+\end{eqnarray}
+
+\begin{table}[h]
+  \centering
+  \caption{線源からのHitが存在するピクセル数(線源を置いていない時にHitが存在したピクセルについて)}
+  \begin{tabular}{|cl|cl|} \hline
+    (i) & 条件を満たすピクセル数 & 880 & (3.4 \%) \\ \hline
+    (ii) & 条件を満たさないピクセル & 77 & (0.3 \%) \\ \hline
+  \end{tabular}
+  \label{tab:non0dist}
+\end{table}
+
+表\ref{tab:non0dist}より，30分間のセルフトリガによるデータ取得では，880個のピクセルが線源からの信号を検出できていると判断できるため，品質保証が可能であることがわかった．一方で，判断できなかった77個のピクセルはバックグラウンドに対して優位な信号を測定することができなかった．センサからの信号でトリガをかけるセルフトリガによるデータ取得方法ではなく，外部トリガによるデータ取得の方でなら，品質保証ができるのではないかと考えた．
+
+\subsection*{まとめ}
+30分間のセルフトリガによるデータ取得によって，線源からの信号が取得できたと判断でき，品質保証が可能だったピクセルの分布を表\ref{tab:selfconc}に示す．
+
+\begin{table}[h]
+  \centering
+  \caption{30分間のセルフトリガによるデータ取得の結果分布}
+  \label{tab:selfconc}
+  \begin{tabular}{cc} \hline
+    90.9 \% & 線源からの信号が検出できた \\
+    0.2 \% & 統計量が少なく判断できない \\
+    0.3 \% & バックグラウンドに対して有意な信号が検出できない \\
+    8.6 \% & ノイズスキャンの段階で非使用と判断されたため判断できない \\ \hline
+  \end{tabular}
+\end{table}
+
+    
+
