--- a/dthesis_template/inputs/Exttrig.tex
+++ b/dthesis_template/inputs/Exttrig.tex
@@ -11,25 +11,58 @@
   \label{fig:trigplan}
 \end{figure}
 
-線源とモジュールの間にシンチレータを配置し，そのシンチレータに粒子が入射した時の発光をMPPCで検出し信号として読み出すことで，トリガに用いる．このシンチレータとMPPCが合わさったものを以降トリガシンチと呼ぶ．トリガシンチは非常にコンパクトな環境で用いられることや，線源とモジュールの間に配置されることから，なるべく小さく，粒子線を遮ることのないように薄くあることが要求されている．
+
+線源とモジュールの間にシンチレータを配置し，そのシンチレータに粒子が入射した時の発光をMPPCで検出し信号として読み出すことで，トリガに用いる．このシンチレータとMPPCが合わさったものを以降トリガシンチと呼ぶ．トリガシンチは非常にコンパクトな環境で用いられることや，線源とモジュールの間に配置されることから，なるべく小さく，粒子線を遮ることのないように薄くあることが要求されている．このセットアップで可能な外部トリガを用いた応答評価試験の手法を考える．
+
+\subsection*{MPPC}
+MPPCとは，Silicon Photomultipliers(SiPM)と呼ばれるデバイスの一種であり，複数の半導体光検出器・アバランシェフォトダイオード(APD)から成るフォトンカウンティングデバイスである．本論文で用いたMPPC・HAMAMATSU S13360-1325CSは，$1.3 \times 1.3 \mathrm{mm^2}$の受光面に$25 \times 25 \mathrm{\mu m^2}$のAPDが敷き詰められている．MPPCの構成を図\ref{fig:APD}に示す．
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=8cm]{./figure/apd.png}
+  \caption{MPPCの構成}
+  \label{fig:APD}
+\end{figure}
+
+全てのAPDの読み出し線，および電圧供給の線は共通していて，全てのAPDピクセルからのシグナルの総和が1つのMPPCからの出力として得られる構造になる．MPPCでは各APDピクセルからの応答が良く揃っているために、総和として出力されるシグナル$Q_{total}$は式\ref{eq:photon}で示されるように光子を受光したピクセル数$N$に1つのAPDから得られるシグナル$Q$をかけた値となる
+
+\begin{eqnarray}
+  Q_{total} = N \times Q
+\end{eqnarray}
+
+受光したピクセル数は、光が微弱である時入射する光量に比例するため， MPPCは非常に高いフォトンカウンティング能力を備えている．
+
+\subsection*{シンチレータ}
+シンチレータとは，放射線のエネルギーを吸収し，内部で励起あるいは電離が起こることで発光する物質である．材質には，無機結晶や液体など様々あるが，本論文では，プラスチックシンチレータを用いた．
 
 \section{トリガシンチの基礎測定}
 この節では，RD53Aに対して行われる品質試験で外部トリガとして使用されるトリガシンチの性能の基礎測定について述べる．
 
 \subsection{概要}
-今回使用したシンチレータと，光を読み出すためにMPPCをシンチレータに取り付けた様子を図\ref{fig:trigscin}に示す．図中のライトガイドとは，シンチレータに粒子が入射した時に発光した光を効率よくMPPCまで伝えるための部品である．また，\ref{sec:trigplan}でも述べたように，非常にコンパクトな環境での利用を目的としているため，トリガシンチは箱の中，読み出し回路は箱の外で使用される．そのため，MPPCの足は約30 $\mathrm{cm}$のケーブルをはんだづけすることで延長し，MPPCからの信号を箱の外まで伝えられるようにしてある．シンチレータは0.5 $\mathrm{mm}$と非常に薄いものを使用し，MPPCと共に黒テープで遮光を行なった．
+今回使用したシンチレータと，光を読み出すためにMPPCをシンチレータに取り付けた様子を図\ref{fig:scin}に示す．図中のライトガイドとは，シンチレータに粒子が入射した時に発光した光を効率よくMPPCまで伝えるための部品である．また，\ref{sec:trigplan}でも述べたように，非常にコンパクトな環境での利用を目的としているため，トリガシンチは箱の中，読み出し回路は箱の外で使用される．そのため，MPPCの足は約30 $\mathrm{cm}$のケーブルをはんだづけすることで延長し，MPPCからの信号を箱の外まで伝えられるようにしてある．シンチレータは0.5 $\mathrm{mm}$と非常に薄いものを使用し，MPPCと共に黒テープで遮光を行なった．
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=6cm]{./figure/trigscin.png}
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=6cm]{./figure/trigscin.png}
+    \subcaption{使用したシンチレータとライトガイド}
+    \label{fig:scin}
+  \end{minipage}
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=6cm]{./figure/trigscin1.png}
+    \subcaption{MPPCを取り付け，遮光したトリガシンチ}
+    \label{fig:trigscin}
+  \end{minipage}
   \caption{0.5mmのシンチレータの様子}
-  \label{fig:trigscin}
+  \label{fig:trigscin1}
 \end{figure}
 
 
 このトリガシンチに対して以下の2点に関する基礎測定を行なった．
 \begin{itemize}
-\item トリガレート 
+\item 線源を置いた時と置かない時のトリガレート 
 \item MPPCが読み出した光量と粒子線が入射した位置の依存性
 \end{itemize}
 
@@ -40,21 +73,89 @@
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=8cm]{./figure/trigsetup.png}
+  \includegraphics[width=15cm]{./figure/trigsetup.png}
   \caption{トリガシンチの基礎測定セットアップ}
   \label{fig:trigsetup}
 \end{figure}
 
-\subsubsection*{MPPCからの信号を波形整形する基板}
-本研究を行うにあたって，MPPCからの信号を波形整形する基板を作成した．基板を図\ref{fig:extcircle}に示す．主に，電圧供給回路，反転増幅回路，コンパレータ回路，LVDS変換回路から構成されている．基板はKiCADというCERN開発のオープンソースプリント基板CADを用いて設計・作成した．LEMO1からは増幅されたMPPCのアナログ信号を，LEMO2からはコンパレータによって閾値電圧と比較することで変換されたデジタル信号を，DPからはTTLだったデジタル信号が変換されてLVDS出力のデジタル信号を読み出すことができる．その3点についてオシロスコープで観測した波形を図\ref{fig:extosiro}に示す．
+\subsubsection*{トリガシンチの信号を波形整形する基板}
+本研究を行うにあたって，MPPCからの信号を波形整形する基板を作成した．基板を図\ref{fig:extcircle}に示す．主に，電圧供給回路，反転増幅回路，コンパレータ回路，LVDS変換回路から構成されている．基板はKiCADというCERN開発のオープンソースプリント基板CADを用いて設計・作成した．LEMO1からは増幅されたMPPCのアナログ信号を，LEMO2からはコンパレータによって閾値電圧と比較することで変換されたデジタル信号を，DPからはTTLだったデジタル信号が変換されてLVDS出力のデジタル信号を読み出すことができる．その3点についてオシロスコープで観測した波形を図\ref{fig:extosiro}に示す．基礎測定では，LEMO2の出力からGATE信号を生成し，LEMO1の出力のデータを測定した．
+
+\begin{figure}[h]
+  \centering
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=6cm]{./figure/trigscin.png}
+    \subcaption{基板の様子}
+    \label{fig:pcb}
+  \end{minipage}
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=8cm]{./figure/pcbosiro.png}
+    \subcaption{動作確認したオシロスコープの様子}
+    \label{fig:extosiro}
+  \end{minipage}
+  \caption{トリガシンチの信号を波形整形する基板}
+\end{figure}
+
+\subsection{光量と粒子の入射位置の依存性測定}
+粒子の入射位置がMPPCから最も離れている時と，最も近い時で，トリガシンチの読み出す光量にどれくらいの差が出るのかをライトガイドがある場合とない場合で測定した．ライトガイドの必要性を評価するためにこの測定を行なった．
+
+\subsubsection*{手順}
+測定を行なった時のトリガシンチと粒子の入射位置を図\ref{fig:trigscinlg}に示す．粒子の入射位置は，トリガシンチと線源の間に小さな穴の空いた鉄板を設置することで調節した．鉄板の穴の位置がMPPCから最も離れている時(図中A)と，最も近い時(図中B)で，トリガシンチから読み出された光量を測定した．ライトガイドありの場合となしの場合で，位置による光量の差に変化があるかを測定した．コンパレータの比較電圧$V_{ref}$を150 $\mathrm{mV}$に設定した．
+
+\begin{figure}[h]
+  \centering
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[height=2cm]{./figure/trigscinwlg.png}
+    \subcaption{ライトガイドがある場合}
+    \label{fig:trigscinwlg}
+  \end{minipage}
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[height=2cm]{./figure/trigscinwolg.png}
+    \subcaption{ライトガイドがない場合}
+    \label{fig:trigscinwolg}
+  \end{minipage}
+  \caption{トリガシンチと粒子の入射位置の関係}
+  \label{fig:trigscinlg}
+\end{figure}
+
+\subsubsection*{結果}
+測定結果は図\ref{fig:trigscincon}のようになっている．
+
+\begin{figure}[h]
+  \centering
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=7.5cm]{./figure/trigscinwlgcon.png}
+    \subcaption{ライトガイドがある場合}
+    \label{fig:trigscinwlg}
+  \end{minipage}
+  \begin{minipage}[b]{0.45\linewidth}
+    \centering
+    \includegraphics[width=7.5cm]{./figure/trigscinwolgcon.png}
+    \subcaption{ライトガイドがない場合}
+    \label{fig:trigscinwolg}
+  \end{minipage}
+  \caption{トリガシンチと粒子の入射位置の関係}
+  \label{fig:trigscinlgcon}
+\end{figure}
+
 
 
 \subsection{トリガレートの測定}
-トリガシンチの上に線源を配置した時としない時で，トリガレートの比較を行なった．
+トリガシンチの上に線源を配置した時としない時で，どれくらい
+\subsubsection*{手順}
+トリガシンチの上に線源を配置した時としない時で，100000イベントのデータを取得するのにかかる時間を測定した．
+
+\subsubsection*{結果}
+トリガシンチの上に線源を配置した時としない時のトリガレートの比較結果は表\ref{tab:trigscinrate}のようになっている．
+
+\
 
 
-\subsection{光量と粒子の入射位置の依存性測定}
-トリガシンチの上に
 
 \section{外部トリガを用いた応答評価試験セットアップ}
 \label{sec:extsetup}
