--- a/dthesis_template/bib/IOPEXPORT_BIB.bib
+++ b/dthesis_template/bib/IOPEXPORT_BIB.bib
@@ -39,3 +39,64 @@ Collider begins operation is also presented.}
       reportNumber  = "CERN-LHCC-2017-021",
       url           = "https://cds.cern.ch/record/2285585",
 }
+@book{Apollinari:2284929,
+      author        = "Apollinari G. and Béjar Alonso I. and Brüning O. and
+                       Fessia P. and Lamont M. and Rossi L. and Tavian L.",
+      title         = "{High-Luminosity Large Hadron Collider (HL-LHC): Technical
+                       Design Report V. 0.1}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "CERN Yellow Reports: Monographs",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2284929",
+      doi           = "10.23731/CYRM-2017-004",
+}
+@book{Apollinari:2284929,
+      author        = "Apollinari G. and Béjar Alonso I. and Brüning O. and
+                       Fessia P. and Lamont M. and Rossi L. and Tavian L.",
+      title         = "{High-Luminosity Large Hadron Collider (HL-LHC): Technical
+                       Design Report V. 0.1}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "CERN Yellow Reports: Monographs",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2284929",
+      doi           = "10.23731/CYRM-2017-004",
+}
+
+@book{SMSze,
+      author        = "S.M.Sze",
+      title         = "{SEMICONDUCTOR DEVICES Physics and Technology 2nd Edition}",
+      publisher     = "産業図書株式会社",
+      month         = "Mar",
+      year          = "2015",
+}
+
+@techreport{Garcia-Sciveres:2287593,
+      author        = "Garcia-Sciveres, Maurice",
+      title         = "{The RD53A Integrated Circuit}",
+      institution   = "CERN",
+      collaboration = "RD53 Collaboration",
+      address       = "Geneva",
+      number        = "CERN-RD53-PUB-17-001",
+      month         = "Oct",
+      year          = "2017",
+      reportNumber  = "CERN-RD53-PUB-17-001",
+      url           = "https://cds.cern.ch/record/2287593",
+}
+
+@misc{03handbo69:online,
+      author        = {},
+      title         = {03\_handbook.pdf},
+      howpublished  = {\url{https://www.hamamatsu.com/resources/pdf/ssd/03_handbook.pdf}},
+      month         = {},
+      year          = {},
+      note          = {(Accessed on 01/05/2020)}
+}
+
+@article{uchiyama,
+      author        = "内山和貴",
+      title         = "{「HL-LHCに向けたシリコンピクセル検出器の雑音及び検出効率の研究」}",
+      journal       = "筑波大学修士論文",
+      year          = "2019",
+}
