--- a/dthesis_template/inputs/Selftrig.tex
+++ b/dthesis_template/inputs/Selftrig.tex
@@ -23,10 +23,10 @@ Latencyとは，図のtrigger入力時にどれだけの時間遡ってメモリ
 
 
 理想的にはL1IDが7のところにトリガの中心を合わせたい．そのために，YARRで指定できるLatencyに関する3種類のパラメータを以下に示す．
-\subsubsection*{delay1}
+\subsubsection*{ソフトウェアで設定されている''delay''}
 FPGAからトリガをどれだけ遅れて出力するかを決める値．本論文では，外部からトリガを受け取ってからどれくらい遅延させてFPGAからRD53Aにトリガを出力するかを決める値．
 
-\subsubsection*{delay2}
+\subsubsection*{ファームウェアの設定値''delay''}
 擬似パルスを送られてからどれくらい遅れてトリガを出力するかを決める値．前章で述べたデジタルスキャンやアナログスキャンの際に関係し，擬似パルスではなく外部からのトリガを使用してデータ取得するセルフトリガや外部トリガを用いたデータ取得の時には無関係．
 
 \subsubsection*{グローバルレジスタ''LatencyConfig''}
