--- a/dthesis_template/inputs/Selftrig.tex
+++ b/dthesis_template/inputs/Selftrig.tex
@@ -117,7 +117,7 @@ ASICのあるピクセルが信号を検知すると，そのピクセルが40 $
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=12cm]{./figure/selfarg.png}
+  \includegraphics[width=12cm]{./figure/selfarc.png}
   \caption{点線源からの立体角}
 \end{figure}
 
