--- a/dthesis_template/inputs/Acknowledgement.tex
+++ b/dthesis_template/inputs/Acknowledgement.tex
@@ -1,9 +1,9 @@
 \chapter*{謝辞}
 
-本研究を進める上でお世話になった方々にお礼申し上げます．指導教員である河野能知准教授には，研究の機会と環境を与えていただきました．また，素粒子実験に関わる知識だけでなくファームウェア，ソフトウェア，回路設計などのノウハウや，研究発表にあたって見やすく伝わりやすい資料作りについてご指導いただきました．毎週の研究室のミーティングでは，研究方針および手法について的確な指摘をいただき，研究をすすめることができました．心から感謝申し上げます．\par
-ATLAS日本QA/QCグループの皆様に感謝いたします．大阪大学の廣瀬穣氏には，ミーティングの場だけでなく，ミーティング外でも時間をとって，ファームウェアの知識のない私に丁寧にご指導いただきましたことに感謝申し上げます．また，東京工業大学の生出秀行氏にも，ソフトウェアの開発やソースホルダの作成の際にたくさんのアドバイスをいただきました．感謝いたします．また，東京工業大学の窪田ありささん，大阪大学の山家谷昌平さんには，同期として研究姿勢について多くを学ばせていただきました．東工大の松崎貴由さん．池亀遥南さんには，クーリングボックスにソースホルダを組み込むにあたって設計についての相談にのっていただきました．東工大の奥山広貴さんにはデータベースの使い方を丁寧に教えていただき，また阪大のLakminさんには回路設計についてアドバイスをいただきました．またお茶大の前田実津季さん，釣希夢さんには発表資料や実験方針，ソフトウェアの設計など，多くの相談にのっていただき，大変感謝しています．\par
-お茶の水女子大学河野研究室の皆様に感謝申し上げます．藤本みのりさんには，データ取得を手伝っていただいたこと，ファームウェアとソフトウェアについての多くの知識を教えていただきました．浅井香奈江さんには，学部生の頃にコーディング技術や，修士になってからも発表資料やプロットについて多くの助言をいただきました．河野研究室卒業生の里吉陽奈子さんには，研究だけでなく卒業後の進路など多くのことを相談させていただきました．修士1年の前田実津季さん，釣希夢さんには，発表資料や実験方針，ソフトウェアの設計などについて話を聞いてもらい，考えを整理することができました．学部4年の飯島綾美さん，兼村有希さん，佐藤真帆さん，三宮梨沙子さん，山本真由さんとは一緒に研究することができてよかったです．ありがとうございました．\par
-ATLASグループでは，KEKの中村浩二さん，筑波大学の原田大豪さんには，センサについての知識を教えていただいた上に，データ取得するにあたって多くの時間をとって協力してくださり大変感謝しています．また，東工大の金さん，潮田理沙さん，卒業生の中村優斗さんには学会などで会うたびによくしてくだいました．ありがとうございました．\par
+本研究を進める上でお世話になった方々にお礼申し上げます．指導教員である河野能知准教授には，研究の機会と環境を与えていただきました．また，素粒子実験に関わる知識だけでなくファームウェア，ソフトウェア，回路設計などのノウハウや，研究発表にあたって見やすく伝わりやすい資料作りについてご指導いただきました．毎週の研究室のミーティングでは，研究方針および手法について的確な指摘をいただき，研究をすすめることができました．心から感謝申し上げます．また，副指導教員で本論文の副査を務めていただきました高橋遼助教授にも感謝申し上げます．\par
+ATLAS日本QA/QCグループの皆様に感謝いたします．大阪大学の廣瀬穣さんには，ミーティングの場だけでなく，ミーティング外でも時間をとって，ファームウェアの知識のない私に丁寧にご指導いただきましたことに感謝申し上げます．また，東京工業大学の生出秀行さんにも，ソフトウェアの開発やソースホルダの作成の際にたくさんのアドバイスをいただきました．感謝いたします．また，東工大の窪田ありささん，阪大の山家谷昌平さんには，同期として研究姿勢について多くを学ばせていただきました．東工大の松崎貴由さん．池亀遥南さんには，クーリングボックスにソースホルダを組み込むにあたって設計についての相談にのっていただきました．東工大の奥山広貴さんにはデータベースの使い方を丁寧に教えていただき，また阪大のLakmin Wickremasingheさんには回路設計についてアドバイスをいただきました．\par
+お茶の水女子大学河野研究室の皆様に感謝申し上げます．藤本みのりさんには，データ取得を手伝っていただいたこと，ファームウェアとソフトウェアについての多くの知識を教えていただきました．浅井香奈江さんには，コーディング技術や，プロットの見せ方について多くの助言をいただきました．河野研究室卒業生の里吉陽奈子さんには，見やすい発表資料の作り方について大変参考にさせていただきました．また修士1年で同じATLAS日本QA/QCグループだった，釣希夢さん，前田実津季さんには発表資料や実験方針，ソフトウェアの設計など，多くの相談にのっていただき，大変感謝しています．\par
+ATLASグループでは，KEKの中村浩二さん，筑波大学の原田大豪さんには，センサについての知識を教えていただいた上に，データ取得するにあたって多くの時間をとって協力してくださり大変感謝しています．また，東工大の金恩寵さん，潮田理沙さん，卒業生の中村優斗さんには学会などで会うたびによくしてくだいました．ありがとうございました．\par
 最後に，何不自由ない学生生活，研究生活を実現してくたださった両親に深く感謝いたします．
 
 
