--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -119,7 +119,7 @@ $\beta$線の今回用いた$\beta$線源は2017/02/13時点で$ 5.00 \times 10^
   \centering
   \begin{minipage}[b]{0.45\linewidth}
     \centering
-    \includegraphics[width=7cm]{./figure/AnalogScan1.png}
+    \includegraphics[width=7cm]{./figure/AnalogScan.png}
     \subcaption{LCC回路をオフ}
     \label{fig:analog1}
   \end{minipage}
