--- a/dthesis_template/main.tex
+++ b/dthesis_template/main.tex
@@ -15,11 +15,12 @@
 \maketitle
 \frontmatter
 \putAbstract{inputs/abst}
-\putAbstract{inputs/abstEn}
+\input{inputs/abstEn}
 \tableofcontents
 
 \mainmatter
 \input{inputs/Introduction}
+\input{inputs/ATLAS}
 \input{inputs/Detector}
 \input{inputs/Setup}
 \input{inputs/Selftrig}
