--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -1,4 +1,4 @@
-\chapter{粒子線に対する応答評価試験のための読み出しシステムの動作確認}
+\chapter{粒子線に対する応答評価試験のための\\読み出しシステムの動作確認}
 本研究では，粒子線に対する応答評価試験のため，ファームウエアに外部トリガを処理する機能の追加を行なった．この章では，\ref{sec:setup}節で読み出し試験のセットアップ概要，\ref{sec:scans}節で機能を追加したファームウェアが正しく動作しているかの確認について述べる．
 
 \section{読み出しセットアップ概要}
