--- a/dthesis_template/main.tex
+++ b/dthesis_template/main.tex
@@ -7,7 +7,7 @@
 
 \setcounter{secnumdepth}{3} % show subsubsection numbers
 
-\putTitle{HL-LHC ATLAS実験に向けたシリコンピクセル検出器の粒子線に対する応答評価試験}
+\putTitle{HL-LHC ATLAS実験に向けたシリコンピクセル検出器の\\粒子線に対する応答評価試験}
 \putAuthor{鷲津 優維}{お茶の水女子大学 人間文化創成科学研究科 理学専攻}
 \date{\today}
 
