--- a/dthesis_template/bib/IOPEXPORT_BIB.bib
+++ b/dthesis_template/bib/IOPEXPORT_BIB.bib
@@ -51,17 +51,18 @@ Collider begins operation is also presented.}
       url           = "https://cds.cern.ch/record/2284929",
       doi           = "10.23731/CYRM-2017-004",
 }
-@book{Apollinari:2284929,
-      author        = "Apollinari G. and Béjar Alonso I. and Brüning O. and
-                       Fessia P. and Lamont M. and Rossi L. and Tavian L.",
-      title         = "{High-Luminosity Large Hadron Collider (HL-LHC): Technical
-                       Design Report V. 0.1}",
-      publisher     = "CERN",
-      address       = "Geneva",
-      series        = "CERN Yellow Reports: Monographs",
-      year          = "2017",
-      url           = "https://cds.cern.ch/record/2284929",
-      doi           = "10.23731/CYRM-2017-004",
+
+@article{Tanabashi:2018oca,
+      author         = "Tanabashi, M. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "3",
+      pages          = "030001",
+      doi            = "10.1103/PhysRevD.98.030001",
+      SLACcitation   = "%%CITATION = PHRVA,D98,030001;%%"
 }
 
 @book{SMSze,
