--- a/dthesis_template/inputs/Setup.tex
+++ b/dthesis_template/inputs/Setup.tex
@@ -12,6 +12,13 @@
   \label{fig:setup}
 \end{figure}
 
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=12cm]{./figure/Setupcab.png}
+  \caption{セットアップの配線図}
+  \label{fig:setupcab}
+\end{figure}
+
 \subsection*{PCおよびソフトウェア}
 PCからPCIeによって接続されたFPGAボードに制御コマンドを送る．また，FPGAボードからきたデータを整理する．DAQの基本的なソフトウェアとファームウェアはYARRのDAQシステムを用いた．YARRとは読み出しシステムの構築と性能向上を目指すオープンソースプロジェクトである．
 
